--- a/aliases/items.cfg
+++ b/aliases/items.cfg
@@ -1,40 +1,40 @@
-echo "";
-echo "+---------------+----------------------------------+";
-echo "| fin_axe           | Danger Zone Axe/Hatchet          |";
-echo "| fin_bayonet       | Non-M9 Bayonet Knife             |";
-echo "| fin_bowie         | Bowie Knife                      |";
-echo "| fin_breachcharge  | Danger Zone Breach Charges       |";
-echo "| fin_bumpmine      | Danger Zone Bump Mines           |";
-echo "| fin_butterfly     | Butterfly Knife                  |";
-echo "| fin_c4            | C4 Explosive (Defuse mode bomb)  |";
-echo "| fin_classic       | Classic Knife                    |";
-echo "| fin_ctknife       | Default Counter Terrorist Knife  |";
-echo "| fin_exo           | Exo Knife                        |";
-echo "| fin_falchion      | Falchion Knife                   |";
-echo "| fin_fists         | Danger Zone Fists                |";
-echo "| fin_flip          | Flip Knife                       |";
-echo "| fin_gold          | Golden Knife (From Arms Race)    |";
-echo "| fin_gut           | Gut Knife                        |";
-echo "| fin_hammer        | Hammer                           |";
-echo "| fin_healthshot    | Medi-Shots                       |";
-echo "| fin_huntsman      | Huntsman Knife                   |";
-echo "| fin_karambit      | Karambit Knife                   |";
-echo "| fin_m9bayonet     | M9 Bayonet Knife                 |";
-echo "| fin_navaja        | Navaja Knife                     |";
-echo "| fin_nomad         | Nomad Knife                      |";
-echo "| fin_paracord      | Paracord Knife                   |";
-echo "| fin_riotshield    | Riot Shield/Tactical Shield      |";
-echo "| fin_shadowdaggers | Shadow Daggers Knives            |";
-echo "| fin_skeleton      | Skeleton Knife                   |";
-echo "| fin_spectral      | Spectral (Halloween Ghost) Knife |";
-echo "| fin_stiletto      | Stiletto Knife                   |";
-echo "| fin_survival      | Survival Knife                   |";
-echo "| fin_tablet        | Danger Zone Map Tablet           |";
-echo "| fin_tagrenade     | Tactical Awareness (ESP) Grenade |";
-echo "| fin_talon         | Talon Knife                      |";
-echo "| fin_tknife        | Default Terrorist Knife          |";
-echo "| fin_ursus         | Ursus Knife                      |";
-echo "| fin_wrench        | Wrench/Spanner                   |";
-echo "| fin_zeus          | Zeus x27                         |";
-echo "+---------------+----------------------------------+";
-echo "";
+echoln "";
+echoln "+---------------+----------------------------------+";
+echoln "| fin_axe           | Danger Zone Axe/Hatchet          |";
+echoln "| fin_bayonet       | Non-M9 Bayonet Knife             |";
+echoln "| fin_bowie         | Bowie Knife                      |";
+echoln "| fin_breachcharge  | Danger Zone Breach Charges       |";
+echoln "| fin_bumpmine      | Danger Zone Bump Mines           |";
+echoln "| fin_butterfly     | Butterfly Knife                  |";
+echoln "| fin_c4            | C4 Explosive (Defuse mode bomb)  |";
+echoln "| fin_classic       | Classic Knife                    |";
+echoln "| fin_ctknife       | Default Counter Terrorist Knife  |";
+echoln "| fin_exo           | Exo Knife                        |";
+echoln "| fin_falchion      | Falchion Knife                   |";
+echoln "| fin_fists         | Danger Zone Fists                |";
+echoln "| fin_flip          | Flip Knife                       |";
+echoln "| fin_gold          | Golden Knife (From Arms Race)    |";
+echoln "| fin_gut           | Gut Knife                        |";
+echoln "| fin_hammer        | Hammer                           |";
+echoln "| fin_healthshot    | Medi-Shots                       |";
+echoln "| fin_huntsman      | Huntsman Knife                   |";
+echoln "| fin_karambit      | Karambit Knife                   |";
+echoln "| fin_m9bayonet     | M9 Bayonet Knife                 |";
+echoln "| fin_navaja        | Navaja Knife                     |";
+echoln "| fin_nomad         | Nomad Knife                      |";
+echoln "| fin_paracord      | Paracord Knife                   |";
+echoln "| fin_riotshield    | Riot Shield/Tactical Shield      |";
+echoln "| fin_shadowdaggers | Shadow Daggers Knives            |";
+echoln "| fin_skeleton      | Skeleton Knife                   |";
+echoln "| fin_spectral      | Spectral (Halloween Ghost) Knife |";
+echoln "| fin_stiletto      | Stiletto Knife                   |";
+echoln "| fin_survival      | Survival Knife                   |";
+echoln "| fin_tablet        | Danger Zone Map Tablet           |";
+echoln "| fin_tagrenade     | Tactical Awareness (ESP) Grenade |";
+echoln "| fin_talon         | Talon Knife                      |";
+echoln "| fin_tknife        | Default Terrorist Knife          |";
+echoln "| fin_ursus         | Ursus Knife                      |";
+echoln "| fin_wrench        | Wrench/Spanner                   |";
+echoln "| fin_zeus          | Zeus x27                         |";
+echoln "+---------------+----------------------------------+";
+echoln "";
