--- a/aliases/positions.cfg
+++ b/aliases/positions.cfg
@@ -1,19 +1,19 @@
-echo "";
-echo "+-------------+----------------------------------+";
-echo "| de_cache    | Setpos positions for Cache       |";
-echo "| de_dust2    | Setpos positions for Dust 2      |";
-echo "| de_inferno  | Setpos positions for Inferno     |";
-echo "| de_mirage   | Setpos positions for Mirage      |";
-echo "| de_nuke     | Setpos positions for Nuke        |";
-echo "| de_overpass | Setpos positions for Overpass    |";
-echo "| *de_ancient | No list of setpos positions yet  |";
-echo "| *de_train   | No list of setpos positions yet  |";
-echo "| *de_agency  | No list of setpos positions yet  |";
-echo "| *cs_agency  | No list of setpos positions yet  |";
-echo "| *cs_office  | No list of setpos positions yet  |";
-echo "| *de_iris    | No list of setpos positions yet  |";
-echo "| *cs_climb   | No list of setpos positions yet  |";
-echo "+-------------+----------------------------------+";
-echo " * Maps marked with an asterisk have no list yet,";
-echo "   they'll be added eventually, aren't there now.";
-echo "";
+echoln "";
+echoln "+-------------+----------------------------------+";
+echoln "| de_cache    | Setpos positions for Cache       |";
+echoln "| de_dust2    | Setpos positions for Dust 2      |";
+echoln "| de_inferno  | Setpos positions for Inferno     |";
+echoln "| de_mirage   | Setpos positions for Mirage      |";
+echoln "| de_nuke     | Setpos positions for Nuke        |";
+echoln "| de_overpass | Setpos positions for Overpass    |";
+echoln "| *de_ancient | No list of setpos positions yet  |";
+echoln "| *de_train   | No list of setpos positions yet  |";
+echoln "| *de_agency  | No list of setpos positions yet  |";
+echoln "| *cs_agency  | No list of setpos positions yet  |";
+echoln "| *cs_office  | No list of setpos positions yet  |";
+echoln "| *de_iris    | No list of setpos positions yet  |";
+echoln "| *cs_climb   | No list of setpos positions yet  |";
+echoln "+-------------+----------------------------------+";
+echoln " * Maps marked with an asterisk have no list yet,";
+echoln "   they'll be added eventually, aren't there now.";
+echoln "";
