--- a/autoexec-part2.cfg
+++ b/autoexec-part2.cfg
@@ -312,7 +312,7 @@ cl_join_advertise "0";                                          // Advertise joi
 tv_nochat "true";                                               // Don't receive chat messages from other SourceTV spectators
 sv_pure "1";                                                    // Forces all client files to match the server's (except for a certain exempt files)
 sv_tags "hidden";                                               // Server tags. Used to provide extra information to clients when they're browsing for servers. Separate tags with a comma. (hidden hides from community server list)
-rcon_password "mufw!X5Gtd^nkOcmHyMZL37S";                       // remote console password. (changed for every CFG release)
+rcon_password "U&J$%lU#v&!4aPnU26AAQ7";                         // remote console password. (changed for every CFG release)
 
 
 
@@ -338,6 +338,8 @@ snd_mute_losefocus "false";                                     // Mute sounds w
 //CS2 snd_pitchquality "1";                                     // 0: Linear sound mixer 1: Interpolated sound mixer
 //CS2 snd_mix_async "1";                                        // 0: Synchronous sound mixing (for CPUs with very few threads) 1: Asynchronous sound mixing (for CPUs with many threads)
 bot_chatter "off"                                               // Control how bots talk. Allowed values: 'off', 'radio', 'minimal', or 'normal'.
+
+
 
 echoln "[11.0] Finishing up";
 //CS2 net_graphheight "9999";                                   // Height of netgraph panel (9999) is sending it off-screen
@@ -431,7 +433,7 @@ echoln " ";
 echoln " ";
 echoln " ";
 echoln "Loaded";
-echoln "Fin's CS2 Config 5.0.0-alpha5";
+echoln "Fin's CS2 Config 5.0.0-alpha6";
 echoln "https://steamcommunity.com/id/bigfinfrank";
 echoln "https://github.com/bigfinfrank/cfg";
 echoln "Last edited: June 2nd 2023";
