--- a/keys/60percentrow1.cfg
+++ b/keys/60percentrow1.cfg
@@ -1,4 +1,4 @@
-echo "";
+echoln "";
 bind escape;
 bind "F1";
 bind "F2";
@@ -12,4 +12,4 @@ bind "F9";
 bind "F10";
 bind "F11";
 bind "F12";
-echo "";
+echoln "";
