--- a/keys/60percentrow2.cfg
+++ b/keys/60percentrow2.cfg
@@ -1,4 +1,4 @@
-echo "";
+echoln "";
 bind "`";
 bind "1";
 bind "2";
@@ -13,4 +13,4 @@ bind "0";
 bind "-";
 bind "=";
 bind "BACKSPACE";
-echo "";
+echoln "";
