--- a/keys/60percentrow3.cfg
+++ b/keys/60percentrow3.cfg
@@ -1,4 +1,4 @@
-echo "";
+echoln "";
 bind "TAB";
 bind "Q";
 bind "W";
@@ -13,4 +13,4 @@ bind "P";
 bind "[";
 bind "]";
 bind \;
-echo "";
+echoln "";
