--- a/keys/60percentrow4.cfg
+++ b/keys/60percentrow4.cfg
@@ -1,4 +1,4 @@
-echo "";
+echoln "";
 bind "CAPSLOCK";
 bind "A";
 bind "S";
@@ -12,4 +12,4 @@ bind "L";
 bind "SEMICOLON";
 bind "'";
 bind "ENTER";
-echo "";
+echoln "";
