--- a/keys/60percentrow5.cfg
+++ b/keys/60percentrow5.cfg
@@ -1,4 +1,4 @@
-echo "";
+echoln "";
 bind "SHIFT";
 bind "Z";
 bind "X";
@@ -11,4 +11,4 @@ bind ".";
 bind ",";
 bind "/";
 bind "RSHIFT";
-echo "";
+echoln "";
