--- a/keys/60percentrow6.cfg
+++ b/keys/60percentrow6.cfg
@@ -1,10 +1,10 @@
-echo "";
+echoln "";
 bind "CTRL";
 bind "LWIN";
 bind "ALT";
 bind "SPACE";
 bind "RALT";
 bind "RWIN";
-echo "No key for menu key";
+echoln "No key for menu key";
 bind "RCTRL";
-echo "";
+echoln "";
