--- a/keys/80percentkeys.cfg
+++ b/keys/80percentkeys.cfg
@@ -1,5 +1,5 @@
-echo "";
-echo "No key for prtsc";
+echoln "";
+echoln "No key for prtsc";
 bind "SCROLLLOCK";
 bind "NUMLOCK";
 bind "INS";
@@ -12,4 +12,4 @@ bind "UPARROW";
 bind "LEFTARROW";
 bind "DOWNARROW";
 bind "RIGHTARROW";
-echo "";
+echoln "";
