--- a/keys/joystickbinds.cfg
+++ b/keys/joystickbinds.cfg
@@ -1,4 +1,4 @@
-echo "";
+echoln "";
 bind "A_BUTTON";
 bind "B_BUTTON";
 bind "X_BUTTON";
@@ -17,4 +17,4 @@ bind "UP";
 bind "DOWN";
 bind "LEFT";
 bind "RIGHT";
-echo "";
+echoln "";
