--- a/keys/mousekeybinds.cfg
+++ b/keys/mousekeybinds.cfg
@@ -1,4 +1,4 @@
-echo "";
+echoln "";
 bind "MOUSE1";
 bind "MOUSE2";
 bind "MOUSE3";
@@ -6,4 +6,4 @@ bind "MOUSE4";
 bind "MOUSE5";
 bind "MWHEELUP";
 bind "MWHEELDOWN";
-echo "";
+echoln "";
