--- a/keys/numberpadkeys.cfg
+++ b/keys/numberpadkeys.cfg
@@ -1,6 +1,6 @@
-echo "";
+echoln "";
 bind "NUMLOCKTOGGLE";
-bind "KP_SLASH";
+bind "KP_DIVIDE";
 bind "KP_MULTIPLY";
 bind "KP_MINUS";
 bind "KP_HOME";
@@ -16,4 +16,4 @@ bind "KP_PGDN";
 bind "KP_ENTER";
 bind "KP_INS";
 bind "KP_DEL";
-echo "";
+echoln "";
