--- a/positions/de_cache.cfg
+++ b/positions/de_cache.cfg
@@ -1,63 +1,63 @@
-echo "B Main";
-echo "setpos_exact 281.000000 -812.000000 1614.078979";
-echo "";
+echoln "B Main";
+echoln "setpos_exact 281.000000 -812.000000 1614.078979";
+echoln "";
 
-echo "T Spawn";
-echo "setpos_exact 3087.500000 -275.000000 1631.825684";
-echo "";
+echoln "T Spawn";
+echoln "setpos_exact 3087.500000 -275.000000 1631.825684";
+echoln "";
 
-echo "A Truck";
-echo "setpos_exact -987.500000 962.500000 1674.792603";
-echo "";
+echoln "A Truck";
+echoln "setpos_exact -987.500000 962.500000 1674.792603";
+echoln "";
 
-echo "Middle Garage";
-echo "setpos_exact 1487.500000 137.500000 1613.031250";
-echo "";
+echoln "Middle Garage";
+echoln "setpos_exact 1487.500000 137.500000 1613.031250";
+echoln "";
 
-echo "B Sun Room";
-echo "setpos_exact 900.000000 -1287.500000 1613.031250";
-echo "";
+echoln "B Sun Room";
+echoln "setpos_exact 900.000000 -1287.500000 1613.031250";
+echoln "";
 
-echo "Middle Z";
-echo "setpos_exact -462.500000 25.000000 1665.031250";
-echo "";
+echoln "Middle Z";
+echoln "setpos_exact -462.500000 25.000000 1665.031250";
+echoln "";
 
-echo "B Site";
-echo "setpos_exact 90.000000 -1364.000000 1659.031250";
-echo "";
+echoln "B Site";
+echoln "setpos_exact 90.000000 -1364.000000 1659.031250";
+echoln "";
 
-echo "A Main";
-echo "setpos_exact 806.000000 2003.000000 1702.038330";
-echo "";
+echoln "A Main";
+echoln "setpos_exact 806.000000 2003.000000 1702.038330";
+echoln "";
 
-echo "B Tree Room";
-echo "setpos_exact -837.500000 -925.000000 1614.031250";
-echo "";
+echoln "B Tree Room";
+echoln "setpos_exact -837.500000 -925.000000 1614.031250";
+echoln "";
 
-echo "B Checkers";
-echo "setpos_exact 112.500000 -337.500000 1614.031250";
-echo "";
+echoln "B Checkers";
+echoln "setpos_exact 112.500000 -337.500000 1614.031250";
+echoln "";
 
-echo "Middle Boost";
-echo "setpos_exact 887.500000 687.500000 1845.027466";
-echo "";
+echoln "Middle Boost";
+echoln "setpos_exact 887.500000 687.500000 1845.027466";
+echoln "";
 
-echo "A Quad";
-echo "setpos_exact -275.000000 2216.000000 1687.032715";
-echo "";
+echoln "A Quad";
+echoln "setpos_exact -275.000000 2216.000000 1687.032715";
+echoln "";
 
-echo "A Site";
-echo "setpos_exact 1487.500000 137.500000 1613.031250";
-echo "";
+echoln "A Site";
+echoln "setpos_exact 1487.500000 137.500000 1613.031250";
+echoln "";
 
-echo "Middle";
-echo "setpos_exact 137.500000 187.500000 1613.031250";
-echo "";
+echoln "Middle";
+echoln "setpos_exact 137.500000 187.500000 1613.031250";
+echoln "";
 
-echo "Middle Sandbags";
-echo "setpos_exact 105.000000 -137.000000 1616.469971";
-echo "";
+echoln "Middle Sandbags";
+echoln "setpos_exact 105.000000 -137.000000 1616.469971";
+echoln "";
 
-echo "A Squeaky";
-echo "setpos_exact 3087.500000 -275.000000 1631.825684";
-echo "";
+echoln "A Squeaky";
+echoln "setpos_exact 3087.500000 -275.000000 1631.825684";
+echoln "";
