--- a/positions/de_mirage.cfg
+++ b/positions/de_mirage.cfg
@@ -1,71 +1,71 @@
-echo "Middle Window:";
-echo "setpos_exact -1187.500000 -650.000000 -167.968750";
-echo "";
+echoln "Middle Window:";
+echoln "setpos_exact -1187.500000 -650.000000 -167.968750";
+echoln "";
 
-echo "B Apartment Balcony:";
-echo "setpos_exact -2012.500000 762.500000 -48.000000";
-echo "";
+echoln "B Apartment Balcony:";
+echoln "setpos_exact -2012.500000 762.500000 -48.000000";
+echoln "";
 
-echo "Middle boxes:";
-echo "setpos_exact 362.500000 -875.000000 -164.690781";
-echo "";
+echoln "Middle boxes:";
+echoln "setpos_exact 362.500000 -875.000000 -164.690781";
+echoln "";
 
-echo "Middle Snipers Nest:";
-echo "setpos_exact -1250.000000 -1087.500000 -167.968750";
-echo "";
+echoln "Middle Snipers Nest:";
+echoln "setpos_exact -1250.000000 -1087.500000 -167.968750";
+echoln "";
 
-echo "B Short";
-echo "setpos_exact -1037.500000 162.500000 -172.693726";
-echo "";
+echoln "B Short";
+echoln "setpos_exact -1037.500000 162.500000 -172.693726";
+echoln "";
 
-echo "A Site";
-echo "setpos_exact -575.000000 -2262.500000 -177.568588";
-echo "";
+echoln "A Site";
+echoln "setpos_exact -575.000000 -2262.500000 -177.568588";
+echoln "";
 
-echo "B Apartments";
-echo "setpos_exact -1150.000000 725.000000 -79.968750";
-echo "";
+echoln "B Apartments";
+echoln "setpos_exact -1150.000000 725.000000 -79.968750";
+echoln "";
 
-echo "A Jungle";
-echo "setpos_exact -900.000000 -1450.000000 -167.968750";
-echo "";
+echoln "A Jungle";
+echoln "setpos_exact -900.000000 -1450.000000 -167.968750";
+echoln "";
 
-echo "T House";
-echo "setpos_exact -900.000000 -1450.000000 -167.968750";
-echo "";
+echoln "T House";
+echoln "setpos_exact -900.000000 -1450.000000 -167.968750";
+echoln "";
 
-echo "CT Spawn";
-echo "setpos_exact -1937.500000 -1875.000000 -279.812225";
-echo "";
+echoln "CT Spawn";
+echoln "setpos_exact -1937.500000 -1875.000000 -279.812225";
+echoln "";
 
-echo "A Main";
-echo "setpos_exact 637.500000 -1362.500000 -261.504395";
-echo "";
+echoln "A Main";
+echoln "setpos_exact 637.500000 -1362.500000 -261.504395";
+echoln "";
 
-echo "A Scaffolding";
-echo "setpos_exact 37.500000 -2012.500000 -35.968750";
-echo "";
+echoln "A Scaffolding";
+echoln "setpos_exact 37.500000 -2012.500000 -35.968750";
+echoln "";
 
-echo "B Bench";
-echo "setpos_exact -2550.000000 162.500000 -167.784836";
-echo "";
+echoln "B Bench";
+echoln "setpos_exact -2550.000000 162.500000 -167.784836";
+echoln "";
 
-echo "A Palace";
-echo "setpos_exact 350.000000 -2300.000000 -39.968750";
-echo "";
+echoln "A Palace";
+echoln "setpos_exact 350.000000 -2300.000000 -39.968750";
+echoln "";
 
-echo "T Spawn";
-echo "setpos_exact 1200.000000 25.000000 -163.968750";
-echo "";
+echoln "T Spawn";
+echoln "setpos_exact 1200.000000 25.000000 -163.968750";
+echoln "";
 
-echo "Underpass Stairs";
-echo "setpos_exact -750.000000 412.500000 -281.295776";
-echo "";
+echoln "Underpass Stairs";
+echoln "setpos_exact -750.000000 412.500000 -281.295776";
+echoln "";
 
-echo "B Market";
-echo "setpos_exact -1987.500000 -525.000000 -167.968750";
-echo "";
+echoln "B Market";
+echoln "setpos_exact -1987.500000 -525.000000 -167.968750";
+echoln "";
 
-echo "Middle Catwalk";
-echo "setpos_exact -637.500000 -437.500000 -168.570877";
-echo "";
+echoln "Middle Catwalk";
+echoln "setpos_exact -637.500000 -437.500000 -168.570877";
+echoln "";
