--- a/positions/de_nuke.cfg
+++ b/positions/de_nuke.cfg
@@ -1,75 +1,75 @@
-echo "T Spawn";
-echo "setpos_exact -1462.500000 -1174.493042 -419.977295";
-echo "";
+echoln "T Spawn";
+echoln "setpos_exact -1462.500000 -1174.493042 -419.977295";
+echoln "";
 
-echo "Outside";
-echo "setpos_exact 1012.500000 -2162.500000 -415.968750";
-echo "";
+echoln "Outside";
+echoln "setpos_exact 1012.500000 -2162.500000 -415.968750";
+echoln "";
 
-echo "B Site";
-echo "setpos_exact 700.000000 -987.500000 -771.968750";
-echo "";
+echoln "B Site";
+echoln "setpos_exact 700.000000 -987.500000 -771.968750";
+echoln "";
 
-echo "B Pillar";
-echo "setpos_exact 662.500000 -1312.500000 -766.968750";
-echo "";
+echoln "B Pillar";
+echoln "setpos_exact 662.500000 -1312.500000 -766.968750";
+echoln "";
 
-echo "Outside Garage";
-echo "setpos_exact 1762.500000 -2125.000000 -415.968750";
-echo "";
+echoln "Outside Garage";
+echoln "setpos_exact 1762.500000 -2125.000000 -415.968750";
+echoln "";
 
-echo "A Site";
-echo "setpos_exact 787.500000 -1162.500000 -415.968750";
-echo "";
+echoln "A Site";
+echoln "setpos_exact 787.500000 -1162.500000 -415.968750";
+echoln "";
 
-echo "B Double Doors";
-echo "setpos_exact 1337.500000 -950.000000 -767.968750";
-echo "";
+echoln "B Double Doors";
+echoln "setpos_exact 1337.500000 -950.000000 -767.968750";
+echoln "";
 
-echo "B Ramp";
-echo "setpos_exact 612.500000 37.500000 -639.968750";
-echo "";
+echoln "B Ramp";
+echoln "setpos_exact 612.500000 37.500000 -639.968750";
+echoln "";
 
-echo "B Trophy";
-echo "setpos_exact 125.000000 -587.500000 -415.968750";
-echo "";
+echoln "B Trophy";
+echoln "setpos_exact 125.000000 -587.500000 -415.968750";
+echoln "";
 
-echo "T Roof";
-echo "setpos_exact -225.000000 -1112.500000 -171.968750";
-echo "";
+echoln "T Roof";
+echoln "setpos_exact -225.000000 -1112.500000 -171.968750";
+echoln "";
 
-echo "A Lobby";
-echo "setpos_exact -412.500000 -650.000000 -416.569946";
-echo "";
+echoln "A Lobby";
+echoln "setpos_exact -412.500000 -650.000000 -416.569946";
+echoln "";
 
-echo "B Secret";
-echo "setpos_exact 1512.500000 -2125.000000 -639.968750";
-echo "";
+echoln "B Secret";
+echoln "setpos_exact 1512.500000 -2125.000000 -639.968750";
+echoln "";
 
-echo "B Observation";
-echo "setpos_exact 1212.500000 -500.000000 -639.968750";
-echo "";
+echoln "B Observation";
+echoln "setpos_exact 1212.500000 -500.000000 -639.968750";
+echoln "";
 
-echo "Outside Container";
-echo "setpos_exact 712.500000 -2362.500000 -415.968994";
-echo "";
+echoln "Outside Container";
+echoln "setpos_exact 712.500000 -2362.500000 -415.968994";
+echoln "";
 
-echo "A Mini";
-echo "setpos_exact 625.000000 -1650.000000 -415.968750";
-echo "";
+echoln "A Mini";
+echoln "setpos_exact 625.000000 -1650.000000 -415.968750";
+echoln "";
 
-echo "A Squeaky";
-echo "setpos_exact -62.500000 -1250.000000 -415.968750";
-echo "";
+echoln "A Squeaky";
+echoln "setpos_exact -62.500000 -1250.000000 -415.968750";
+echoln "";
 
-echo "B Tunnels";
-echo "setpos_exact 1000.000000 -1612.500000 -639.968750";
-echo "";
+echoln "B Tunnels";
+echoln "setpos_exact 1000.000000 -1612.500000 -639.968750";
+echoln "";
 
-echo "Outside Silo";
-echo "setpos_exact 87.500000 -1650.000000 -19.968742";
-echo "";
+echoln "Outside Silo";
+echoln "setpos_exact 87.500000 -1650.000000 -19.968742";
+echoln "";
 
-echo "A Heaven";
-echo "setpos_exact 1153.000000 -369.500000 -127.968750";
-echo "";
+echoln "A Heaven";
+echoln "setpos_exact 1153.000000 -369.500000 -127.968750";
+echoln "";
