--- a/positions/de_overpass.cfg
+++ b/positions/de_overpass.cfg
@@ -1,55 +1,55 @@
-echo "A Site";
-echo "setpos_exact -2687.500000 887.500000 474.934235";
-echo "";
+echoln "A Site";
+echoln "setpos_exact -2687.500000 887.500000 474.934235";
+echoln "";
 
-echo "T Spawn";
-echo "setpos_exact -1300.000000 -2962.500000 257.499542";
-echo "";
+echoln "T Spawn";
+echoln "setpos_exact -1300.000000 -2962.500000 257.499542";
+echoln "";
 
-echo "B Canal";
-echo "setpos_exact -437.500000 -150.000000 8.912591";
-echo "";
+echoln "B Canal";
+echoln "setpos_exact -437.500000 -150.000000 8.912591";
+echoln "";
 
-echo "A Long";
-echo "setpos_exact -3587.500000 -750.000000 488.104309";
-echo "";
+echoln "A Long";
+echoln "setpos_exact -3587.500000 -750.000000 488.104309";
+echoln "";
 
-echo "B Site";
-echo "setpos_exact -1100.000000 50.000000 98.031250";
-echo "";
+echoln "B Site";
+echoln "setpos_exact -1100.000000 50.000000 98.031250";
+echoln "";
 
-echo "A Fountain";
-echo "setpos_exact -2725.000000 -2062.500000 472.031250";
-echo "";
+echoln "A Fountain";
+echoln "setpos_exact -2725.000000 -2062.500000 472.031250";
+echoln "";
 
-echo "A Party";
-echo "setpos_exact -3087.500000 -1750.000000 517.808533";
-echo "";
+echoln "A Party";
+echoln "setpos_exact -3087.500000 -1750.000000 517.808533";
+echoln "";
 
-echo "A Playground";
-echo "setpos_exact -2312.500000 -2375.000000 476.886871";
-echo "";
+echoln "A Playground";
+echoln "setpos_exact -2312.500000 -2375.000000 476.886871";
+echoln "";
 
-echo "B Tunnel";
-echo "setpos_exact -1737.500000 -975.000000 96.031250";
-echo "";
+echoln "B Tunnel";
+echoln "setpos_exact -1737.500000 -975.000000 96.031250";
+echoln "";
 
-echo "CT Stairs";
-echo "setpos_exact -2037.500000 1212.500000 356.031250";
-echo "";
+echoln "CT Stairs";
+echoln "setpos_exact -2037.500000 1212.500000 356.031250";
+echoln "";
 
-echo "B Pipes";
-echo "setpos_exact -312.500000 -1050.000000 7.472409";
-echo "";
+echoln "B Pipes";
+echoln "setpos_exact -312.500000 -1050.000000 7.472409";
+echoln "";
 
-echo "B Sniper's Nest";
-echo "setpos_exact -1937.500000 587.500000 256.031250";
-echo "";
+echoln "B Sniper's Nest";
+echoln "setpos_exact -1937.500000 587.500000 256.031250";
+echoln "";
 
-echo "A Bathrooms";
-echo "setpos_exact -2462.500000 -700.000000 432.031250";
-echo "";
+echoln "A Bathrooms";
+echoln "setpos_exact -2462.500000 -700.000000 432.031250";
+echoln "";
 
-echo "A Bank";
-echo "setpos_exact -2475.000000 1150.000000 480.031250";
-echo "";
+echoln "A Bank";
+echoln "setpos_exact -2475.000000 1150.000000 480.031250";
+echoln "";
