--- a/tournament.cfg
+++ b/tournament.cfg
@@ -33,8 +33,8 @@ hostname "Fin's Tournament Config 1.0.15 - github.com/bigfinfrank/cfg";
 
 
 say [1.2] Setting passwords;
-rcon_password "0rT0Qe2w%UT2#LHmgt1eKxc&";
-sv_password "Treat-Headrest-Why2-Polio";
+rcon_password "O9tq^Pv&la6B!$tbFj8Vo2X77H";
+sv_password "Ranking-Useable4-Parted-Protegee-Dwindle";
 
 
 
