--- a/positions/de_inferno.cfg
+++ b/positions/de_inferno.cfg
@@ -1,91 +1,91 @@
-echo "T Spawn";
-echo "setpos_exact -1612.000000 763.000000 -48.967819";
-echo "";
+echoln "T Spawn";
+echoln "setpos_exact -1612.000000 763.000000 -48.967819";
+echoln "";
 
-echo "B Banana Cubby";
-echo "setpos_exact 984.000000 1888.000000 145.445251";
-echo "";
+echoln "B Banana Cubby";
+echoln "setpos_exact 984.000000 1888.000000 145.445251";
+echoln "";
 
-echo "B Site Dark";
-echo "setpos_exact 32.000000 3224.000000 160.031250";
-echo "";
+echoln "B Site Dark";
+echoln "setpos_exact 32.000000 3224.000000 160.031250";
+echoln "";
 
-echo "B Site Church";
-echo "setpos_exact 432.000000 3576.000000 160.031250";
-echo "";
+echoln "B Site Church";
+echoln "setpos_exact 432.000000 3576.000000 160.031250";
+echoln "";
 
-echo "A Middle";
-echo "setpos_exact 1512.000000 720.000000 138.437851";
-echo "";
+echoln "A Middle";
+echoln "setpos_exact 1512.000000 720.000000 138.437851";
+echoln "";
 
-echo "A Site Apartments";
-echo "setpos_exact 1903.594604 -350.478668 256.031250";
-echo "";
+echoln "A Site Apartments";
+echoln "setpos_exact 1903.594604 -350.478668 256.031250";
+echoln "";
 
-echo "A Site Arch";
-echo "setpos_exact 2128.000000 1224.000000 170.817078";
-echo "";
+echoln "A Site Arch";
+echoln "setpos_exact 2128.000000 1224.000000 170.817078";
+echoln "";
 
-echo "T Banana Ramp";
-echo "setpos_exact 1512.000000 720.000000 138.437851";
-echo "";
+echoln "T Banana Ramp";
+echoln "setpos_exact 1512.000000 720.000000 138.437851";
+echoln "";
 
-echo "B Banana";
-echo "setpos_exact 264.000000 1216.000000 106.031258";
-echo "";
+echoln "B Banana";
+echoln "setpos_exact 264.000000 1216.000000 106.031258";
+echoln "";
 
-echo "A Library";
-echo "setpos_exact 2656.000000 1232.000000 160.031250";
-echo "";
+echoln "A Library";
+echoln "setpos_exact 2656.000000 1232.000000 160.031250";
+echoln "";
 
-echo "A Site";
-echo "setpos_exact 1976.000000 688.000000 160.031250";
-echo "";
+echoln "A Site";
+echoln "setpos_exact 1976.000000 688.000000 160.031250";
+echoln "";
 
-echo "A Boiler";
-echo "setpos_exact 1192.000000 352.000000 128.031250@";
-echo "";
+echoln "A Boiler";
+echoln "setpos_exact 1192.000000 352.000000 128.031250@";
+echoln "";
 
-echo "Second Middle Apartments";
-echo "setpos_exact 288.000000 -688.000000 96.031250";
-echo "";
+echoln "Second Middle Apartments";
+echoln "setpos_exact 288.000000 -688.000000 96.031250";
+echoln "";
 
-echo "B Site Corner";
-echo "setpos_exact 34.773998 2480.000000 160.031250";
-echo "";
+echoln "B Site Corner";
+echoln "setpos_exact 34.773998 2480.000000 160.031250";
+echoln "";
 
-echo "Second Middle Window";
-echo "setpos_exact 1029.000000 -255.281006 256.031250";
-echo "";
+echoln "Second Middle Window";
+echoln "setpos_exact 1029.000000 -255.281006 256.031250";
+echoln "";
 
-echo "A Balcony";
-echo "setpos_exact 2080.000000 -352.000000 256.031250";
-echo "";
+echoln "A Balcony";
+echoln "setpos_exact 2080.000000 -352.000000 256.031250";
+echoln "";
 
-echo "Middle Top";
-echo "setpos_exact 928.000000 664.000000 111.031250";
-echo "";
+echoln "Middle Top";
+echoln "setpos_exact 928.000000 664.000000 111.031250";
+echoln "";
 
-echo "Second Middle Kitchen";
-echo "setpos_exact -416.000000 361.395996 185.031250";
-echo "";
+echoln "Second Middle Kitchen";
+echoln "setpos_exact -416.000000 361.395996 185.031250";
+echoln "";
 
-echo "Second Middle Lower";
-echo "setpos_exact -668.989014 -248.000000 -0.678018";
-echo "";
+echoln "Second Middle Lower";
+echoln "setpos_exact -668.989014 -248.000000 -0.678018";
+echoln "";
 
-echo "CT Spawn";
-echo "setpos_exact 2538.169922 2408.000000 132.031250";
-echo "";
+echoln "CT Spawn";
+echoln "setpos_exact 2538.169922 2408.000000 132.031250";
+echoln "";
 
-echo "Second Middle Top";
-echo "setpos_exact 928.000000 0.000000 90.781303";
-echo "";
+echoln "Second Middle Top";
+echoln "setpos_exact 928.000000 0.000000 90.781303";
+echoln "";
 
-echo "Second Middle Bridge";
-echo "setpos_exact -432.000000 -128.000000 192.031250";
-echo "";
+echoln "Second Middle Bridge";
+echoln "setpos_exact -432.000000 -128.000000 192.031250";
+echoln "";
 
-echo "Middle Lower";
-echo "setpos_exact 368.000000 712.000000 85.255356;setang_exact 0.000000 261.304321 0.000000";
-echo "";
+echoln "Middle Lower";
+echoln "setpos_exact 368.000000 712.000000 85.255356;setang_exact 0.000000 261.304321 0.000000";
+echoln "";
