--- a/positions/de_train.cfg
+++ b/positions/de_train.cfg
@@ -1,50 +1,50 @@
-echo "B Upper";
-echo "setpos_exact -300.000000 -1712.500000 -102.968750";
-echo "";
+echoln "B Upper";
+echoln "setpos_exact -300.000000 -1712.500000 -102.968750";
+echoln "";
 
-echo "T Alley";
-echo "setpos_exact 287.500000 1537.500000 -227.968750";
-echo "";
+echoln "T Alley";
+echoln "setpos_exact 287.500000 1537.500000 -227.968750";
+echoln "";
 
-echo "T Spawn";
-echo "setpos_exact -1950.000000 1438.000000 -191.968750";
-echo "";
+echoln "T Spawn";
+echoln "setpos_exact -1950.000000 1438.000000 -191.968750";
+echoln "";
 
-echo "B Main";
-echo "setpos_exact -675.000000 375.000000 -215.968750";
-echo "";
+echoln "B Main";
+echoln "setpos_exact -675.000000 375.000000 -215.968750";
+echoln "";
 
-echo "T Main";
-echo "setpos_exact -675.000000 1050.000000 -215.968750";
-echo "";
+echoln "T Main";
+echoln "setpos_exact -675.000000 1050.000000 -215.968750";
+echoln "";
 
-echo "B Locker Room";
-echo "setpos_exact -712.500000 137.500000 16.031250";
-echo "";
+echoln "B Locker Room";
+echoln "setpos_exact -712.500000 137.500000 16.031250";
+echoln "";
 
-echo "A Tunnel 2";
-echo "setpos_exact 1937.500000 -387.500000 -215.968750";
-echo "";
+echoln "A Tunnel 2";
+echoln "setpos_exact 1937.500000 -387.500000 -215.968750";
+echoln "";
 
-echo "B Site";
-echo "setpos_exact 1300.000000 -1400.000000 -351.968750";
-echo "";
+echoln "B Site";
+echoln "setpos_exact 1300.000000 -1400.000000 -351.968750";
+echoln "";
 
-echo "A Site";
-echo "setpos_exact 875.000000 -100.000000 -215.968750";
-echo "";
+echoln "A Site";
+echoln "setpos_exact 875.000000 -100.000000 -215.968750";
+echoln "";
 
-echo "A Ivy";
-echo "setpos_exact 1312.500000 925.000000 -223.968750";
-echo "";
+echoln "A Ivy";
+echoln "setpos_exact 1312.500000 925.000000 -223.968750";
+echoln "";
 
-echo "A Tunnel 1";
-echo "setpos_exact 1350.000000 475.000000 -216.967056";
-echo "";
+echoln "A Tunnel 1";
+echoln "setpos_exact 1350.000000 475.000000 -216.967056";
+echoln "";
 
-echo "A Popdog";
-echo "setpos_exact -675.000000 -237.500000 16.031250";
-echo "";
+echoln "A Popdog";
+echoln "setpos_exact -675.000000 -237.500000 16.031250";
+echoln "";
 
-echo " * This is a work in progress map, not all areas are complete.";
-echo "";
+echoln " * This is a work in progress map, not all areas are complete.";
+echoln "";
