--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "files.eol": "\n"
+  "files.eol": "\n",
+  "files.insertFinalNewline": true,
+  "files.trimFinalNewlines": true,
+  "files.trimTrailingWhitespace": true,
+  "git.alwaysSignOff": true,
+  "git.enableCommitSigning": true,
+  "files.encoding": "utf8"
 }
