forgot to update the edit date and version number
Signed-off-by: bigfinfrank <18708515+bigfinfrank@users.noreply.github.com>

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,9 +1,9 @@
 clear;                                                          // Clear all console output
 echo "Loading";                                                 // Echo sends text to console (NOT game chat).
-echo "@femboyfin's gmod Config 1.0.0-beta1";
+echo "@femboyfin's gmod Config 1.0.0";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "Last edited: August 27th 2023";
+echo "Last edited: August 30th 2023";
 echo "";
 echo "";
 echo "";
@@ -28,9 +28,9 @@ echo "";
 
 
 echo "[0.0] Initializing";
-alias "fin_version" "echo 1.0.0-beta1";                         // Sets version number to an alias (can be output with: "alias fin_version")
+alias "fin_version" "echo 1.0.0";                         // Sets version number to an alias (can be output with: "alias fin_version")
 sv_contact "gmodcfg@fin.fail";                                  // Contact email for server sysop (please change this)
-hostname "@femboyfin's gmod Config 1.0.0-beta1 - github.com/bigfinfrank/cfg";// Sets the server name shown in the scoreboard
+hostname "@femboyfin's gmod Config 1.0.0 - github.com/bigfinfrank/cfg";// Sets the server name shown in the scoreboard
 sv_steamgroup "42297947";                                       // Group ID that your servers associate with (by default this is https://steamcommunity.com/groups/advancedcfg)
 cl_clanid "8469659";                                            // Current clan ID for name decoration
 
@@ -740,10 +740,10 @@ echo "";
 echo "";
 echo "";
 echo "Loaded";
-echo "@femboyfin's gmod Config 1.0.0-beta1";
+echo "@femboyfin's gmod Config 1.0.0";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "Last edited: August 27th 2023";
+echo "Last edited: August 30th 2023";
 echo "";
 echo "";
 echo "";
