--- a/autoexec-part1.cfg
+++ b/autoexec-part1.cfg
@@ -39,7 +39,7 @@ cl_clanid "8469659";                                            // Current clan 
 echoln "[1.0] Configuring client-side networking";
 net_client_steamdatagram_enable_override "1";                   // 0: Method requested by GC. >0: Always use Steam Datagram Relay <0: Always use direct UDP
 sv_usercmd_custom_random_seed "false";                          // Makes bullet decals show where the bullet actually landed
-mm_dedicated_search_maxping "65";                               // Longest preferred ping to dedicated servers for games
+mm_dedicated_search_maxping "25";                               // Longest preferred ping to dedicated servers for games
 //CS2 cl_connection_trouble_show "1";                           // Show connection trouble HUD warnings
 cl_lagcompensation "true";                                      // Perform server side lag compensation of weapon firing events.
 //CS2 net_steamcnx_enabled "2";                                 // Use steam connections on listen server as a fallback, 2 forces use of steam connections instead of raw UDP.
@@ -70,7 +70,7 @@ echoln "[1.1] Configuring server-side networking (and tickrate)";
 sv_minrate "1000000";                                           // Min bandwidth rate allowed on server, 0 == unlimited
 sv_maxrate "1000000";                                           // Max bandwidth rate allowed on server, 0 == unlimited
 sv_lan "false";                                                 // 1: Server is a lan server ( no heartbeat, no authentication, no non-class C addresses )
-fin_128tick;                                                    // Run the alias that configures networking for 64 tick servers
+// CS2 BROKEN IN PUBLIC LT RELEASE: fin_128tick;                // Run the alias that configures networking for 64 tick servers
 // All preconfigured options: fin_16tick; fin_32tick; fin_64tick; fin_128tick; fin_256tick; fin_512tick;
 engine_no_focus_sleep "0";                                      // This isn't officially networking but the server tickrate seems to never be higher than the host framerate which is affected by this when tabbed out.
 
@@ -212,7 +212,7 @@ alias "fin_crouched" "-duck";
 
 
 echoln "[3.3.4] Meta utility aliases";
-alias "fin_keycontainer" "fin_everykey; fin_rgbhud; fin_nextxhair; fin_nothing"; // This will be activated upon pressing almost any key
+alias "fin_keycontainer" "fin_everykey; fin_rgbhud; fin_nothing"; // This will be activated upon pressing almost any key
 alias "fin_nothing"      "//";                                    // Can be used to remove most commands' console output
 alias "fin_everykey"     "";                                      // You can set this in game with: alias "fin_everykey" "commands here"
 alias "fin_uninspect"    "-lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon;";
