--- a/autoexec-part2.cfg
+++ b/autoexec-part2.cfg
@@ -293,18 +293,18 @@ sv_kick_players_with_cooldown "2";                              // (0: do not ki
 rcon_connected_clients_allow "false";                           // Allow clients to use rcon commands on server.
 lobby_default_privacy_bits2 "0";                                // Lobby default permissions (0: private, 1: public)
 cl_show_observer_crosshair "1";                                 // Show the crosshair of the player being observed. 0: off 1: friends and party 2: everyone
-cl_sanitize_muted_players "true";                               // Hide names and avatars of muted players.
-cl_sanitize_player_names "true";                                // Replace names of other players with something non-offensive.
+cl_sanitize_muted_players "false";                               // Hide names and avatars of muted players.
+cl_sanitize_player_names "false";                                // Replace names of other players with something non-offensive.
 cl_invites_only_mainmenu "true";                                // If turned on, will ignore all invites when user is playing a match
 //CS2 cl_downloadfilter "nosounds";                             // Determines which files can be downloaded from the server (all, none, nosounds)
 cl_invites_only_friends "true";                                 // If turned on, will ignore in-game invites from recent teammates or other non-friends
 sv_prime_accounts_only "true";                                  // When this setting is enabled only prime users can connect to this game server.
-cl_hide_avatar_images "2";                                      // Hide avatar images for other players. 0 - Off. 1 - Block All 2 - Block all but friends
+cl_hide_avatar_images "0";                                      // Hide avatar images for other players. 0 - Off. 1 - Block All 2 - Block all but friends
 //CS2 sv_reliableavatardata "2";                                // When enabled player avatars are exchanged via gameserver (0: off, 1: players, 2: server)
 //CS2 sv_steamauth_enforce "2";                                 // Requires connection to steam servers for VAC
 cl_player_ping_mute "1";                                        // If 1, player pinging will make a sound, if 0, pings will be silent
 cl_steamscreenshots "0";                                        // Enable/disable saving screenshots to Steam
-cl_mute_enemy_team "true";                                      // Block all communication from players on the enemy team.
+cl_mute_enemy_team "false";                                      // Block all communication from players on the enemy team.
 //CS2 cl_disablehtmlmotd "1";                                   // Turns off HTML message-of-the-day's in community servers
 //CS2 voice_recordtofile "1";                                   // Records mic and voice data to local files.
 cl_join_advertise "0";                                          // Advertise joinable game in progress to Steam friends, otherwise need a Steam invite (2: all servers, 1: official servers, 0: none)
@@ -326,12 +326,13 @@ tv_relaypassword "pY&7!&M172E1J4d4MPCTeBuT**oSs7D";             // GOTV password
 
 echoln "[10.0] Sliding volume sliders";
 //CS2 -fin_loudshift;                                           // Sets the global volume to our default
+volume "0.1225";                                                // Changes the master volume
 snd_menumusic_volume        "0";                                // Changes the main menu   music volume (Max is 0.60, .06 is 10% of that)
 snd_roundstart_volume       "0";                                // Changes the round start music volume (Max is 0.60)
 snd_roundend_volume         "0";                                // Changes the round end   music volume (Max is 0.60)
-snd_mapobjective_volume     "0.006";                            // Changes the "bomb..planted" and "taken..hostage" voice over volume (Max is 0.60, .006 is 1% of that)
-snd_deathcamera_volume      "0.03";                             // Changes the death camera music volume (Max is 0.60, .03 is 5% of that)
-snd_tensecondwarning_volume "0.06";                             // Changes the ten second warning music volume (Max is 0.60, .06 is 10% of that)
+snd_mapobjective_volume     "0.0025";                           // Changes the "bomb..planted" and "taken..hostage" voice over volume (Max is 0.60, .006 is 1% of that)
+snd_deathcamera_volume      "0.0025";                           // Changes the death camera music volume (Max is 0.60, .03 is 5% of that)
+snd_tensecondwarning_volume "0.36";                             // Changes the ten second warning music volume (Max is 0.60, .06 is 10% of that)
 //CS2 snd_dzmusic_volume "0.03";                                // Changes the Danger Zone music volume (Max is 0.60, .03 is 5% of that)
 snd_mvp_volume "0.03";                                          // Changes the music kit end of round MVP volume (Max is 0.60, .03 is 5% of that)
 //   %5 = 0.0025
