--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,2 +1,2 @@
-exec "./autoexec-part1.cfg";
-exec "./autoexec-part2.cfg";
+exec "./autoexec-part1.cfg"; exec "./autoexec-part2.cfg";
+// Single line seems to force one file to be executed *after* the other instead of whichever one gaben decides should be run first for.. some reason
